--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="https://raw.githubusercontent.com/miragconsulting/krupa/main/krupa8.jpeg" alt="Детали каменной кладки">
+                    <img src="https://raw.githubusercontent.com/miragconsulting/krupa/main/krupa8.jpg" alt="3D Визуализация">
                     <div class="absolute bottom-0 left-0 right-0 bg-gradient-to-t from-black to-transparent p-6">
                         <h3 class="text-white font-bold text-lg">3D Визуализация</h3>
                     </div>
@@ -554,7 +554,7 @@
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="https://raw.githubusercontent.com/miragconsulting/krupa/main/Krupa8.jpeg" alt="План территории">
+                    <img src="https://raw.githubusercontent.com/miragconsulting/krupa/main/Krupa9.jpeg" alt="3D Визуализация">
                     <div class="absolute bottom-0 left-0 right-0 bg-gradient-to-t from-black to-transparent p-6">
                         <h3 class="text-white font-bold text-lg">3D Визуализация</h3>
                     </div>
