--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="https://raw.githubusercontent.com/miragconsulting/krupa/main/Krupa9.jpg" alt="3D Визуализация">
+                    <img src="https://raw.githubusercontent.com/miragconsulting/krupa/main/krupa9.jpg" alt="Krupa 3D">
                     <div class="absolute bottom-0 left-0 right-0 bg-gradient-to-t from-black to-transparent p-6">
                         <h3 class="text-white font-bold text-lg">3D Визуализация</h3>
                     </div>
